--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,8 @@ include:
     shield: cradio_left
   - board: nice_nano_v2
     shield: cradio_right
+  - board: nice_nano_v2
+    shield: skeletyl_left
+  - board: nice_nano_v2
+    shield: skeletyl_right
+
