--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,7 @@ include:
   - board: nice_nano_v2
     shield: cradio_right
   - board: nice_nano_v2
-    shield: skeletyl_left
+    shield: tbkmini_left
   - board: nice_nano_v2
-    shield: skeletyl_right
+    shield: tbkmini_right
 
