--- a/config/tbkmini.conf
+++ b/config/tbkmini.conf
@@ -1,1 +1,6 @@
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=8
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=10
