--- a/config/tbkmini.conf
+++ b/config/tbkmini.conf
@@ -1,7 +1,9 @@
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=30
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=30
 CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=8
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=10
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_MAX_CONN=11
+CONFIG_BT_MAX_PAIRED=11
+CONFIG_ZMK_USB_LOGGING=n
