--- a/config/boards/shields/charybdis/charybdis_right.conf
+++ b/config/boards/shields/charybdis/charybdis_right.conf
@@ -11,9 +11,11 @@ CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=4000
 CONFIG_ZMK_LOG_LEVEL_DBG=y
 
 CONFIG_ZMK_MOUSE=y
-#CONFIG_ZMK_MOUSE_TICK_DURATION=6
+CONFIG_ZMK_MOUSE_TICK_DURATION=8
 CONFIG_ZMK_MOUSE_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_MOUSE_DEDICATED_THREAD_PRIORITY=1
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_USB=y
 
 CONFIG_PMW3360=y
 #CONFIG_PMW3360_CPI=1600
