--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -5,3 +5,6 @@ CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=10
 CONFIG_BT_MAX_CONN=11
 CONFIG_BT_MAX_PAIRED=11
+
+CONFIG_PMW3360_CPI=6000
+CONFIG_PMW3360_CPI_DIVIDOR=6
