--- a/config/boards/shields/charybdis/charybdis.dtsi
+++ b/config/boards/shields/charybdis/charybdis.dtsi
@@ -4,8 +4,12 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &five_column_transform;
-    };
+    }; 
 
+    vbatt: vbatt {
+	compatible = "zmk,battery-nrf-vddh";
+    };
+          
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
         columns = <12>;
@@ -44,23 +48,4 @@
 			, <&pro_micro 9 GPIO_ACTIVE_HIGH>
             ;
     };
-
-	trackballs {
-		compatible = "zmk,keymap-trackballs";
-		trackballs = <&trackball>;
-	};
-};
-
-&spi0 {
-	compatible = "nordic,nrf-spim";
-	status = "disabled";
-
-	trackball: trackball@0 {
-		compatible = "pixart,pmw3360";
-		status = "disabled";
-		reg = <0>;
-		label = "TRACKBALL";
-		spi-max-frequency = <2000000>;
-		duplex = <2048>; // required by 3-wire spi
-	};
 };
