--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -1,3 +1,16 @@
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_MOUSE=y
+
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=9
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=16
+CONFIG_BT_BUF_ACL_TX_COUNT=32
+CONFIG_BT_L2CAP_TX_BUF_COUNT=32
+
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
+
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=30
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=30
 CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=8
@@ -6,5 +19,5 @@ CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=10
 CONFIG_BT_MAX_CONN=11
 CONFIG_BT_MAX_PAIRED=11
 
-CONFIG_PMW3360_CPI=800
-CONFIG_PMW3360_CPI_DIVIDOR=1
+#CONFIG_ZMK_USB_LOGGING=y
+#CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=2000
