--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,5 +1,12 @@
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=15
 CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=8
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=20
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=10
+CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
+CONFIG_ZMK_HID_KEYBOARD_REPORT_SIZE=12
+CONFIG_ZMK_HID_CONSUMER_REPORT_SIZE=12
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_MAX_CONN=11
+CONFIG_BT_MAX_PAIRED=11
+CONFIG_ZMK_MOUSE=y
