--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,7 @@ include:
   - board: nice_nano_v2
     shield: cradio_right
   - board: nice_nano_v2
-    shield: tbkmini_left
+    shield: lily58_left
   - board: nice_nano_v2
-    shield: tbkmini_right
+    shield: lily58_right
 
