--- a/config/gh5.conf
+++ b/config/gh5.conf
@@ -1,5 +1,12 @@
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
-CONFIG_ZMK_USB_LOGGING=y
+
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=16
+
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
+
+#CONFIG_ZMK_USB_LOGGING=y
